# chartplot

./: .gitignore  BatteryPlotter.pro  CMakeLists.txt  chartmanager.cpp  chartmanager.h  excelreader.cpp  excelreader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xlsxreader.cpp  xlsxreader.h
